--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -42,6 +42,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Zr5XyX9Xhd0d",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Major Keys**\n",
+        "***Linear Regression*** - Find's how well some values relate together($R^2$), then calculates how dependable those relationship are ($p-value$).\n",
+        "\n",
+        "***Baseline Model*** - Gives you a good first measure for your machine learning model because if you can't beat a simple baseline model that may indicate a cause for concern."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "colab_type": "text",
         "id": "7IXUfiQ2UKj6"
       },
@@ -133,17 +146,17 @@
       "metadata": {
         "id": "xqOztv53pCzz",
         "colab_type": "code",
+        "outputId": "820f0c55-ee1b-4ff7-d17d-999ae6007825",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        },
-        "outputId": "820f0c55-ee1b-4ff7-d17d-999ae6007825"
+        }
       },
       "source": [
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,16 +436,16 @@
       "metadata": {
         "id": "BeJx1VJjp5bk",
         "colab_type": "code",
+        "outputId": "546c563e-3294-46f7-fb3d-2eba15070d18",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "546c563e-3294-46f7-fb3d-2eba15070d18"
+        }
       },
       "source": [
         "df['price'].describe()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,16 +493,16 @@
       "metadata": {
         "id": "alMo0JNfqQ32",
         "colab_type": "code",
+        "outputId": "6e75437e-8d3e-4180-d62d-4aa7afc830c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "6e75437e-8d3e-4180-d62d-4aa7afc830c4"
+        }
       },
       "source": [
         "df['price'].describe()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,92 +529,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fkee3FjkrED3",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 221
-        },
-        "outputId": "d85b1996-b034-4137-bf7f-37e6dd658611"
-      },
-      "source": [
-        "# creating a baseline of the mean $3580 average New York, Rent\n",
-        "guess = df['price'].mean()\n",
-        "errors = guess - df['price']\n",
-        "errors"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0          580\n",
-              "1       -1,885\n",
-              "2          730\n",
-              "3          305\n",
-              "4          230\n",
-              "         ...  \n",
-              "49347      380\n",
-              "49348     -370\n",
-              "49349      985\n",
-              "49350      230\n",
-              "49351    1,380\n",
-              "Name: price, Length: 48818, dtype: float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aXwF3RnRrmEC",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "2d7acfc2-49a5-4f18-ea39-abbe7b7838ce"
-      },
-      "source": [
-        "mean_abs_error = errors.abs().mean()\n",
-        "print(f'Prediction on how much it costs to rent an apt in NYC ${guess:,.0f}.')\n",
-        "print(f'Currently off by ${mean_abs_error:,.0f} on average.')"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Prediction on how much it costs to rent an apt in NYC $3,580.\n",
-            "Currently off by $1,202 on average.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "XsO1ytKntmsU",
         "colab_type": "code",
+        "outputId": "2448823c-3a5d-44a1-ae38-9294d2c818de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 985
-        },
-        "outputId": "2448823c-3a5d-44a1-ae38-9294d2c818de"
+        }
       },
       "source": [
         "# Finding he column with best covariance on price to use as my feature\n",
         "# bedrooms\n",
         "df.cov()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1634,19 +1575,63 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Fkee3FjkrED3",
+        "colab_type": "code",
+        "outputId": "d85b1996-b034-4137-bf7f-37e6dd658611",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        }
+      },
+      "source": [
+        "# creating a baseline using the average (mean) price ($3580) of New York's apartments rent\n",
+        "guess = df['price'].mean()\n",
+        "errors = guess - df['price']\n",
+        "errors"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0          580\n",
+              "1       -1,885\n",
+              "2          730\n",
+              "3          305\n",
+              "4          230\n",
+              "         ...  \n",
+              "49347      380\n",
+              "49348     -370\n",
+              "49349      985\n",
+              "49350      230\n",
+              "49351    1,380\n",
+              "Name: price, Length: 48818, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Kjt2ZBVxsfI6",
         "colab_type": "code",
+        "outputId": "47b0f119-060a-48cb-bac8-216e514761d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        },
-        "outputId": "47b0f119-060a-48cb-bac8-216e514761d7"
+        }
       },
       "source": [
         "import plotly.express as px\n",
         "px.scatter(df, x='bedrooms', y='price', trendline='ols')"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1710,6 +1695,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aXwF3RnRrmEC",
+        "colab_type": "code",
+        "outputId": "2d7acfc2-49a5-4f18-ea39-abbe7b7838ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "mean_abs_error = errors.abs().mean()\n",
+        "print(f'Prediction on how much it costs to rent an apt in NYC ${guess:,.0f}.')\n",
+        "print(f'Currently off by ${mean_abs_error:,.0f} on average.')"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Prediction on how much it costs to rent an apt in NYC $3,580.\n",
+            "Currently off by $1,202 on average.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Paa1WJFz0G8F",
@@ -1724,11 +1737,11 @@
       "metadata": {
         "id": "VhtnRJfI3xh1",
         "colab_type": "code",
+        "outputId": "ef6c1003-5829-4eb1-d3b1-6cf2aa3b2c43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "ef6c1003-5829-4eb1-d3b1-6cf2aa3b2c43"
+        }
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
@@ -1744,7 +1757,7 @@
         "\n",
         "model.fit(X, y)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,11 +1785,11 @@
       "metadata": {
         "id": "grJU6aKA6-F6",
         "colab_type": "code",
+        "outputId": "33a80436-e166-4878-ee65-dfdf207288bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "33a80436-e166-4878-ee65-dfdf207288bd"
+        }
       },
       "source": [
         "# test and prediction\n",
@@ -1786,7 +1799,7 @@
         "\n",
         "print(f'Predicted rent for {beds} bedroom New York apartment: ${y_pred[0]:,.0f}')"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1812,11 +1825,11 @@
       "metadata": {
         "id": "lc42rtc2C8_7",
         "colab_type": "code",
+        "outputId": "a1905db4-a5aa-4b3e-89a1-1ce9da9b86b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "a1905db4-a5aa-4b3e-89a1-1ce9da9b86b6"
+        }
       },
       "source": [
         "def estimate(rooms):\n",
@@ -1833,7 +1846,7 @@
         "\n",
         "estimate(2)"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1860,11 +1873,11 @@
       "metadata": {
         "id": "KzLEsKf4HQVO",
         "colab_type": "code",
+        "outputId": "f9086b04-f6bd-4425-e039-a0777eb58ffc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f9086b04-f6bd-4425-e039-a0777eb58ffc"
+        }
       },
       "source": [
         "modelS = LinearRegression()\n",
@@ -1874,7 +1887,7 @@
         "\n",
         "modelS.fit(XX, yy)"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1895,17 +1908,17 @@
       "metadata": {
         "id": "tmg6jKKLIB8N",
         "colab_type": "code",
+        "outputId": "9deae788-88cb-468b-e012-f26802ec62a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "9deae788-88cb-468b-e012-f26802ec62a4"
+        }
       },
       "source": [
         "print(modelS.intercept_)\n",
         "print(modelS.coef_)"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
