Added Pipeline Stretch Goal

--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -1955,6 +1955,49 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "0GPy56x9tz0e",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Stretch Goal: Use the Pipeline version of the above"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "04xMuy5at516",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a41a082f-e184-4ffa-e250-bf7633a9b25e"
+      },
+      "source": [
+        "from sklearn.pipeline import Pipeline\n",
+        "\n",
+        "estimators = [('encoder', ce.OneHotEncoder()),\n",
+        "              ('imputer', SimpleImputer(strategy='mean')),\n",
+        "              ('scaler', StandardScaler())]\n",
+        "pipe = Pipeline(estimators)\n",
+        "pipe.fit(X_train,y_train)\n",
+        "X_val_pipe = pipe.transform(X_val)\n",
+        "print('Validation Accuracy:', model.score(X_val_pipe,y_val))"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation Accuracy: 0.8117647058823529\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NroL5XBcUaSo",
         "colab_type": "text"
       },
@@ -1982,6 +2025,42 @@
         "print('Test Accuracy:', model.score(X_test_scaled,y_test))"
       ],
       "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Accuracy: 0.7894736842105263\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wqkPZVL1xSNL",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Pipeline Version of the above"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yjBjqM04xVGl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f7e1d241-631b-49c9-cecf-bea69b6846e2"
+      },
+      "source": [
+        "X_test_pipe = pipe.transform(X_test)\n",
+        "print('Test Accuracy:', model.score(X_test_scaled,y_test))"
+      ],
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
