--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -13177,7 +13177,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8625f7b0-f110-4469-e704-21965695c1bb"
+        "outputId": "eb0bc29f-1b94-46d2-9ead-583fd3d1dba9"
       },
       "source": [
         "#Before we get all ahead of ourselves and jump right into the logistical\n",
@@ -13195,21 +13195,16 @@
         "\n",
         "#Make predictions on validation data\n",
         "y_pred = baseline.predict(X_val)\n",
-        "accuracy_score(y_val, y_pred)"
+        "print('Using validation to compute baseline accuracy: ', accuracy_score(y_val, y_pred))"
       ],
-      "execution_count": 28,
+      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.5529411764705883"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
+          "output_type": "stream",
+          "text": [
+            "Using validation to compute baseline accuracy:  0.5529411764705883\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -13222,12 +13217,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a879d232-9fe0-41be-b187-9720b9db53b9"
+        "outputId": "1daae73b-009c-4119-a042-eba7314f55f4"
       },
       "source": [
-        "#Before we get all ahead of ourselves and jump right into the logistical\n",
-        "#regression, lets set up a basline for comparison.\n",
-        "#Baseline: Accuracy if we were to guess every burrito's greatness\n",
+        "#I don't know why we'd ever do the following.  It seems like the thought process\n",
+        "#is to use your validation set for making a baseline for you to validate against\n",
+        "#and your test set is for actually testing.  So I don't anticipate ever making\n",
+        "#a baseline off of our test data.  But maybe that is wrong? idk, and I'm curious\n",
+        "#so I'm going to do it.\n",
         "\n",
         "from sklearn.dummy import DummyClassifier\n",
         "from sklearn.metrics import accuracy_score\n",
@@ -13240,21 +13237,17 @@
         "\n",
         "#Make predictions on validation data\n",
         "y_pred = baseline.predict(X_test)\n",
-        "accuracy_score(y_test, y_pred)"
+        "accuracy_score(y_test, y_pred)\n",
+        "print('Using test data to compute baseline accuracy: ', accuracy_score(y_test, y_pred))"
       ],
-      "execution_count": 29,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.43243243243243246"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
+          "output_type": "stream",
+          "text": [
+            "Using test data to compute baseline accuracy:  0.43243243243243246\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -13262,6 +13255,52 @@
       "cell_type": "code",
       "metadata": {
         "id": "hj1HvhcIWzZE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 190
+        },
+        "outputId": "b9c49039-5eed-49ca-801f-5677e09080dc"
+      },
+      "source": [
+        "#lets get into the logistic Regression.  I'm just doing all features for mvp\n",
+        "#but for my stretch I'm going to go do do selectkbest\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "log_reg = LogisticRegression(solver = 'lbfgs')\n",
+        "log_reg.fit(X_train.drop('Burrito', axis =1), y_train)\n",
+        "\n",
+        "print('Validation Accuracy', log_reg.score(X_val.drop('Burrito', axis = 1), y_val))"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation Accuracy 0.8117647058823529\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qvpHUGjrd855",
         "colab_type": "code",
         "colab": {}
       },
