--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -13258,21 +13258,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 190
+          "height": 34
         },
-        "outputId": "b9c49039-5eed-49ca-801f-5677e09080dc"
+        "outputId": "7f79d41a-b41d-4d33-9a37-4d851c6e384b"
       },
       "source": [
         "#lets get into the logistic Regression.  I'm just doing all features for mvp\n",
         "#but for my stretch I'm going to go do do selectkbest\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
-        "log_reg = LogisticRegression(solver = 'lbfgs')\n",
+        "#I don't understand why/when scale vs just increase iterations.  This would be\n",
+        "#good to review with team.\n",
+        "log_reg = LogisticRegression(solver = 'lbfgs', max_iter = 1000)\n",
         "log_reg.fit(X_train.drop('Burrito', axis =1), y_train)\n",
         "\n",
         "print('Validation Accuracy', log_reg.score(X_val.drop('Burrito', axis = 1), y_val))"
       ],
-      "execution_count": 37,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -13280,20 +13282,6 @@
             "Validation Accuracy 0.8117647058823529\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
@@ -13301,6 +13289,236 @@
       "cell_type": "code",
       "metadata": {
         "id": "qvpHUGjrd855",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2169fa57-991c-4895-b170-2839323bcc89"
+      },
+      "source": [
+        "#Now lets do the testing data\n",
+        "\n",
+        "y_pred = log_reg.predict(X_test.drop('Burrito', axis = 1))\n",
+        "\n",
+        "print('Test Accuracy', accuracy_score(y_test, y_pred))"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Accuracy 0.7837837837837838\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nWt0HvctgZ7I",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Stretch it out\n",
+        "Lets onehotencode that obnoxious burrito column.<br><br>\n",
+        "Lets selectkbest to find the best test accuracy I can get."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gazsxX0-hCZd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2882088d-883f-4be9-9ffa-f433ba7b2519"
+      },
+      "source": [
+        "#Okay our burrito column still needs to be encoded.  I keep dropping it above\n",
+        "#because I didn't encode it before.  Lets just do that now and get something\n",
+        "#useful out of that column\n",
+        "import category_encoders as ce\n",
+        "\n",
+        "encoder = ce.OneHotEncoder(use_cat_names = True)\n",
+        "\n",
+        "X_train = encoder.fit_transform(X_train)\n",
+        "X_val = encoder.fit_transform(X_val)\n",
+        "X_test = encoder.fit_transform(X_test)\n",
+        "\n",
+        "X_train.shape, X_val.shape, X_test.shape"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((298, 53), (85, 53), (37, 53))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aogn43VGgjIc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "da69f102-d8c1-467d-d7b9-2da57401bf78"
+      },
+      "source": [
+        "#looks like we properly encoded okay, so on to figuring out the best selection\n",
+        "#of features.\n",
+        "from sklearn.feature_selection import f_regression, SelectKBest\n",
+        "\n",
+        "for k in range(1, len(X_train.columns) + 1):\n",
+        "\n",
+        "  selector = SelectKBest(score_func = f_regression, k = k)\n",
+        "\n",
+        "  X_train_selected = selector.fit_transform(X_train, y_train)\n",
+        "  X_val_selected = selector.transform(X_val)\n",
+        "  X_test_selected = selector.transform(X_test)\n",
+        "\n",
+        "  log_reg = LogisticRegression(solver = 'lbfgs', max_iter = 1000)\n",
+        "  log_reg.fit(X_train_selected, y_train)\n",
+        "\n",
+        "  print('Validation Accuracy', log_reg.score(X_val_selected, y_val))\n",
+        "\n",
+        "  y_pred = log_reg.predict(X_test_selected)\n",
+        "  print('Test Accuracy', accuracy_score(y_test, y_pred))"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation Accuracy 0.8117647058823529\n",
+            "Test Accuracy 0.7297297297297297\n",
+            "Validation Accuracy 0.8470588235294118\n",
+            "Test Accuracy 0.6486486486486487\n",
+            "Validation Accuracy 0.8705882352941177\n",
+            "Test Accuracy 0.7027027027027027\n",
+            "Validation Accuracy 0.9176470588235294\n",
+            "Test Accuracy 0.7567567567567568\n",
+            "Validation Accuracy 0.8705882352941177\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8941176470588236\n",
+            "Test Accuracy 0.7297297297297297\n",
+            "Validation Accuracy 0.8823529411764706\n",
+            "Test Accuracy 0.7297297297297297\n",
+            "Validation Accuracy 0.8470588235294118\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8588235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8470588235294118\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8470588235294118\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8588235294117647\n",
+            "Test Accuracy 0.7297297297297297\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8470588235294118\n",
+            "Test Accuracy 0.7567567567567568\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7567567567567568\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7567567567567568\n",
+            "Validation Accuracy 0.8235294117647058\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8235294117647058\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8352941176470589\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.7764705882352941\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.7764705882352941\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.788235294117647\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8117647058823529\n",
+            "Test Accuracy 0.7837837837837838\n",
+            "Validation Accuracy 0.8117647058823529\n",
+            "Test Accuracy 0.7567567567567568\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LB-zal-gje4M",
         "colab_type": "code",
         "colab": {}
       },
