sprint challenge check again

--- a/DS_Sprint_Challenge_Linear_Models.ipynb
+++ b/DS_Sprint_Challenge_Linear_Models.ipynb
@@ -1274,6 +1274,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If we just guessed every Ames home sold for $180,384,\n",
+      "we would be off by $58,150 on average.\n"
+     ]
+    }
+   ],
+   "source": [
+    "guess = homes['SalePrice'].mean()\n",
+    "errors = guess - homes['SalePrice']\n",
+    "mean_absolute_error = errors.abs().mean()\n",
+    "print(f'If we just guessed every Ames home sold for ${guess:,.0f},')\n",
+    "print(f'we would be off by ${mean_absolute_error:,.0f} on average.')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
